--- a/.drone.yml
+++ b/.drone.yml
@@ -11,6 +11,7 @@ steps:
 - name: everything
   image: letfn/drone-kaniko
   settings:
+    args: --destination=letfn/drone-hub
     cache: true
     cache_repo: letfn/cache
     password:
