--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,7 @@ steps:
   settings:
     args: --destination=letfn/drone-hub
     cache: true
-    cache_repo: letfn/cache
+    cache_repo: defn/cache
     password:
       from_secret: docker_password
     repo: letfn/drone-hub
