--- a/.drone.yml
+++ b/.drone.yml
@@ -35,12 +35,9 @@ platform:
 
 steps:
 - name: everything
-  image: letfn/container
-  commands:
-  - id
-  - pwd
-  - ls -ld .drone.yml
-  - drone fmt --save
+  image: letfn/drone
+  settings:
+    task: fmt
 
 ---
 kind: pipeline
@@ -53,9 +50,9 @@ platform:
 
 steps:
 - name: everything
-  image: letfn/container
-  commands:
-  - drone lint
+  image: letfn/drone
+  settings:
+    task: lint
 
 ---
 kind: pipeline
